--- a/translations/admin.es.xlf
+++ b/translations/admin.es.xlf
@@ -1960,7 +1960,7 @@
       </notes>
       <segment>
         <source>Vergeben!</source>
-        <target>¡Perdonar!</target>
+        <target>¡Entregar!</target>
       </segment>
     </unit>
     <unit id="BYzHaeg" name="Aktuelle Städte">
@@ -2896,7 +2896,7 @@
       </notes>
       <segment>
         <source>Stadt anlegen</source>
-        <target>Stadt anlegen</target>
+        <target>Crear un pueblo</target>
       </segment>
     </unit>
     <unit id="yo6CbZw" name="Avatar">
